--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,7 +15,11 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-5">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#"
+          <a
+            class="nav-link active"
+            aria-current="page"
+            style="cursor: pointer"
+            (click)="open()"
             >Create Employee</a
           >
         </li>
