--- a/src/app/form-modal/form-modal.component.html
+++ b/src/app/form-modal/form-modal.component.html
@@ -192,7 +192,9 @@
   </form>
 </div>
 <div class="modal-footer">
-  <button class="btn btn-primary" type="submit">Submit</button>
+  <button class="btn btn-primary" type="button" (click)="onSubmit()">
+    Submit
+  </button>
   <button
     type="button"
     class="btn btn-outline-dark"
