--- a/src/app/employees/employees.component.html
+++ b/src/app/employees/employees.component.html
@@ -15,7 +15,7 @@
           <td>{{ employee.lastName }}</td>
           <td>{{ employee.email }}</td>
           <td>
-            <button class="btn btn-primary">Update</button>
+            <button class="btn btn-primary" (click)="updateRecord(employee.id)">Update</button>
             <button class="btn btn-danger" style="margin-left: 10px">
               Delete
             </button>
