--- a/src/app/employees/employees.component.html
+++ b/src/app/employees/employees.component.html
@@ -19,7 +19,7 @@
             <button class="btn btn-danger" style="margin-left: 10px">
               Delete
             </button>
-            <button class="btn btn-primary" style="margin-left: 10px">
+            <button class="btn btn-primary" style="margin-left: 10px" (click)="viewEmployee(employee.id)">
               View
             </button>
           </td>
